- Improvement: Added user selectable ADIF fields in the Other and My Data tabs. (Closes #4)
- Improvement: Enhanced how the UDP server is started on KLog start.
- Improvement: Added some basic SQL Injection protection to the UI. (closes #95)
- Improvement: UI data is saved before entering the Setup and restored after setup is done. (closes #188)
- Translations: Catalan (TNX Txema), Czech (TNX OK1MLG) & Spanish (EA4K).

May 2021 - 1.5.3
- Bugfix: Fixes the DataBase update process to add the Q65 mode.
- Bugfix: Unexpected Setup dialog behavior. (Closes issue #178) (TNX foldynl)
- Bugfix: Time is not in UTC when "Log in real time" is uncheck. (Closes issue #179) (TNX foldynl)
- Bugfix: Missing translation in SoftwareUpdateDialog. (Closes issue #180) (TNX foldynl)
- Bugfix: Inconsistency text in Tip#2. (Closes issue #182) (TNX foldynl)
- Bugfix: Missing Translation string in SetupPageMisc::createUI. (Closes issue #185) (TNX foldynl)
- Bugfix: When LoTW service was no enabled, KLog insisted to show the QSOs to be exported.
- Bugfix: Setup->Satellites did not show a correct Short name. (Closes issue #192) (TNX foldynl)
- Bugfix: Removal DX Cluster unexpected disconnection. (TNX foldynl)
- Bugfix: Tip #21 was not shown. (Closes issue #184) (TNX foldynl)
- Bugfix: TQSL was not properly found on macOS. (Closes issue #195) (TNX K0JM)
- Enhancement: Improved the readability of the DX Cluster window. (TNX foldynl)
- Updated the KLog tips.
- Translation: Czech (TNX OK1MLG), Spanish.

May 2021 - 1.5.2
- Bugfix: Complex calls like K/EA4K/P were identified as wrong calls. (Closes issue #177) (TNX PA3FNT)

April 2021 - 1.5.1
- Added the GitHub repository to find new releases due to the issue with savannah.nongnu.org
- New feature: F4 toggles the real time status (on/off).
- Improvements on call identification  management on user input.
- Bugfix: Editing removes QTH and name (Closes issue #113)
- Bugfix: Some complex calls (i.e. F/EA4K) were causing a crash unders some conditions.